opam-version: "2.0"
name: "bark"
version: "0.1"
synopsis: "Unofficial OCaml port of elm/parser (v1.1.0)"
description: """
This is an unofficial OCaml port of the elm/parser library (version 1.1.0) by
Evan Czaplicki.This port is extremely faithful and copies the original almost
line-for-line.
"""
doc: "https://justinlubin.github.io/bark"
maintainer: "Justin Lubin <jlubi333@gmail.com>"
authors: "Justin Lubin <jlubi333@gmail.com>"
license: "BSD 3-Clause"
homepage: "https://github.com/justinlubin/bark"
bug-reports: "https://github.com/justinlubin/bark/issues"
dev-repo: "git+https://github.com/justinlubin/bark.git"
depends: [ "ocaml" "dune" ]
build: ["dune" "build" "-p" name "-j" jobs]
